Fix Klipper Actions content truncation

Commit f9669af2 introduced a regression with Klipper Actions: it used
truncated text as a source for the action, which resulted in truncated
output.

BUG: 444365